fixed layout problems

--- a/templates/form.css
+++ b/templates/form.css
@@ -1,44 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,600,700);
 /* open sans fonts; italic 300, 400, 600. regular 400 600 700 */
 
-
-
-
-
-
-body {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-}
-
-p {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  padding: 0 5%;
-  font-size: .9em;
-  line-height: 1.7em;
-}
-
-h1 {
-  font-weight: 600;
-  text-transform: capitalize;
-  text-align: center;
-  font-size: 1.5em;
-  margin-bottom: .3em;
-  margin-top: 1.5em;
-  line-height: .7em;
-}
-
-h2{
-  text-align:center;
-}
-
-* {
+ * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-body {
+
+/*body {
   padding: 20px 15%;
+}
+*/
+
+main {
+  margin-top: 100px;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
 }
 form header {
   margin: 0 0 20px 0;
